--- a/config/sites-enabled/innstant.site.conf
+++ b/config/sites-enabled/innstant.site.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-	ServerName innstant.me
+	ServerName innstant.site
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/html/public
 
@@ -13,8 +13,8 @@
 
 	</Directory>
 
-	ErrorLog ${APACHE_LOG_DIR}/innstant.me_error.log
-	CustomLog ${APACHE_LOG_DIR}/innstant.me_custom.log combined
+	ErrorLog ${APACHE_LOG_DIR}/innstant.site_error.log
+	CustomLog ${APACHE_LOG_DIR}/innstant.site_custom.log combined
 
 </VirtualHost>
 
