--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
         ipv4_address: 172.16.238.15
     working_dir: /var/www/html
     extra_hosts:
-    - innstant.me:127.0.0.1
+    - innstant.site:127.0.0.1
     external_links:
       - aether3:aether3
 
@@ -38,7 +38,7 @@ services:
     command: bash -c "composer install"
 
   node:
-    image: node:8
+    image: node:8-slim
     depends_on:
     - composer
     volumes:
