--- a/config/sites-enabled/innstant.me.conf
+++ b/config/sites-enabled/innstant.me.conf
@@ -1,9 +1,9 @@
 <VirtualHost *:80>
-	ServerName innstant.site
+	ServerName innstant.me
 	ServerAdmin webmaster@localhost
-	DocumentRoot /var/www/html/public
+	DocumentRoot /var/www/innstant4/public
 
-	<Directory /var/www/html/public>
+	<Directory /var/www/innstant4/public>
 		Options Indexes FollowSymLinks MultiViews
 		AllowOverride All
 		Order allow,deny
@@ -13,8 +13,8 @@
 
 	</Directory>
 
-	ErrorLog ${APACHE_LOG_DIR}/innstant.site_error.log
-	CustomLog ${APACHE_LOG_DIR}/innstant.site_custom.log combined
+	ErrorLog ${APACHE_LOG_DIR}/innstant.me_error.log
+	CustomLog ${APACHE_LOG_DIR}/innstant.me_custom.log combined
 
 </VirtualHost>
 
