innstant4 bind logs from container to the host machine

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,9 @@ services:
     - type: bind
       source: ./config/xdebug/docker-php-ext-xdebug.ini
       target: /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+    - type: bind
+      source: ./logs/apache-logs
+      target: /var/log/apache2
     ports:
     - 80:80
     networks:
