--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     command: bash -c "composer install"
 
   node:
-    image: node:8
+    image: node:8-slim
     depends_on:
     - composer
     volumes:
