--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,21 +2,37 @@ version: '3.2'
 services:
   web:
     build: ./php-server
+    container_name: innstant4
     environment:
     - APACHE_RUN_USER=www-data
     volumes:
     - type: bind
-      source: ${APP_PATH_HOST}
-      target: ${APP_PATH_CONTAINER}
+      source: ./src/innstant4
+      target: /var/www/innstant4/
     - type: bind
-      source: ${INNSTANT_ME_CONF_HOST}
-      target: ${INNSTANT_ME_CONF_CONTAINER}
+      source: ./config/sites-enabled/innstant.me.conf
+      target: /etc/apache2/sites-enabled/innstant.me.conf
     - type: bind
-      source: ${INNSTANT_ME_PHP_INI_HOST}
-      target: ${INNSTANT_ME_PHP_INI_CONTAINER}
+      source: ./config/php/php.ini-development
+      target: /usr/local/etc/php/php.ini
     - type: bind
       source: ./config/xdebug/docker-php-ext-xdebug.ini
-      target: /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+      target: /etc/php/7.0/apache2/conf.d/20-xdebug.ini
+    - type: bind
+      source: ./config/yaml/yaml.ini
+      target: /etc/php/7.0/apache2/conf.d/20-yaml.ini
+    - type: bind
+      source: ./config/xdebug/docker-php-ext-xdebug.ini
+      target: /etc/php/7.0/cli/conf.d/20-xdebug.ini
+    - type: bind
+      source: ./config/yaml/yaml.ini
+      target: /etc/php/7.0/cli/conf.d/20-yaml.ini
+    - type: bind
+      source: ./config/xdebug/docker-php-ext-xdebug.ini
+      target: /etc/php/7.0/mods-available/xdebug.ini
+    - type: bind
+      source: ./config/yaml/yaml.ini
+      target: /etc/php/7.0/mods-available/yaml.ini
     - type: bind
       source: ./logs/apache-logs
       target: /var/log/apache2
@@ -28,27 +44,30 @@ services:
     working_dir: /var/www/innstant4
     extra_hosts:
     - innstant.me:127.0.0.1
+    - aether3.me:172.16.238.10
     external_links:
       - aether3:aether3
 
   composer:
     build: ./composer
+    container_name: composer-i
     volumes:
     - type: bind
-      source: ${APP_PATH_HOST}
-      target: ${APP_PATH_CONTAINER}
-    working_dir: ${APP_PATH_CONTAINER}
+      source: ./src/innstant4
+      target: /var/www/innstant4/
+    working_dir: /var/www/innstant4/
     command: bash -c "composer install"
 
   node:
     image: node:8-slim
+    container_name: node
     depends_on:
     - composer
     volumes:
     - type: bind
-      source: ${APP_PATH_HOST}
-      target: ${APP_PATH_CONTAINER}
-    working_dir: ${APP_PATH_CONTAINER}
+      source: ./src/innstant4
+      target: /var/www/innstant4/
+    working_dir: /var/www/innstant4/
     command: bash -c "npm install && npm run watch"
 
 networks:
