--- a/php-server/Dockerfile
+++ b/php-server/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:16.04
 RUN apt-get update && apt-get install -y --no-install-recommends \
     apache2 apache2-dev \
     && apt-get install -y nano mc htop unzip php-xml php7.0-mbstring php7.0-zip php-dev \
-       libyaml-dev php-curl libfontconfig libxrender-dev php-memcached memcached php-intl \
+       libyaml-dev php-curl libfontconfig libxext6 libxrender-dev php-memcached memcached php-intl \
        libapache2-mod-php\
     && pecl install yaml-2.0.0 && pecl install xdebug-2.6.0 \
     && a2enmod rewrite \
